# RustForge

./: Readme.md
RustForge/: Cargo.toml
RustForge/api/: client.rs
RustForge/cli/: parser.rs
RustForge/core/: config.rs  errors.rs  lifecycle.rs  mod.rs
RustForge/data-access/: mod.rs  orm.rs  query.rs
RustForge/examples/: advanced app.rs  basic app.rs
RustForge/logging/: logger.rs
RustForge/plugins/: manager.rs
RustForge/routing/: middleware.rs  mod.rs  router.rs
RustForge/security/: auth.rs
RustForge/src/: lib.rs
RustForge/templating/: renderer.rs
RustForge/testing/: mocks.rs
RustForge/tests/: framework tests.rs
